--- a/html/national/chimborazo.html
+++ b/html/national/chimborazo.html
@@ -4,17 +4,17 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="/css/pages_style.css">
+	<link rel="stylesheet" href="../../css/pages_style.css">
 	<title>Chimborazo</title>
 </head>
 <body>
-	<img src="/assets/img/national/chimborazo.jpg" alt="" id="background-image">
+	<img src="../../assets/img/national/chimborazo.jpg" alt="" id="background-image">
 	<div id="main-container">
 		<div id="card" class="glass">
 			<div id="info-container">
 
 				<a id="return-button" href="/index.html#national-screen">
-					<img src="/assets/svg/return.svg" alt="">
+					<img src="../../assets/svg/return.svg" alt="">
 				</a>
 
 				<h1>Chimborazo</h1>
@@ -22,7 +22,7 @@
 			</div>
 
 			<div id="img-container">
-				<img src="/assets/img/national/chimborazo2.jpg" alt="">
+				<img src="../../assets/img/national/chimborazo2.jpg" alt="">
 			</div>
 		</div>
 	</div>
