--- a/html/national/guayaquil.html
+++ b/html/national/guayaquil.html
@@ -4,12 +4,12 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="/css/pages_style.css">
+	<link rel="stylesheet" href="../../css/pages_style.css">
 	<title>Guayaquil</title>
 </head>
 <body>
 
-	<img src="/assets/img/national/guayaquil.jpg" alt="" id="background-image">
+	<img src="../../assets/img/national/guayaquil.jpg" alt="" id="background-image">
 
 	<div id="main-container">
 		<div id="card" class="glass">
@@ -17,7 +17,7 @@
 			<div id="info-container">
 
 				<a id="return-button" href="/index.html#national-screen">
-					<img src="/assets/svg/return.svg" alt="">
+					<img src="../../assets/svg/return.svg" alt="">
 				</a>
 
 				<h1>Guayaquil</h1>
@@ -25,7 +25,7 @@
 			</div>
 
 			<div id="img-container">
-				<img src="/assets/img/national/guayaquil2.jpg" alt="">
+				<img src="../../assets/img/national/guayaquil2.jpg" alt="">
 			</div>
 		</div>
 	</div>
