--- a/index.html
+++ b/index.html
@@ -10,23 +10,23 @@
 <body>
 	<div id="main-container">
 		<div id="home-screen">
-			<img src="/assets/img/background/background.jpg" alt="">
+			<img src="./assets/img/background/background.jpg" alt="">
 			<div id="salute-container">
 				<h1>Viaja Ya!</h1>
 				<p>Chini-Destinos te garantiza un viaje seguro, economico, y como no, un viaje para recordar, viajando a los mejores destinos, enriquesete de increibles paisajes, culturas interesantes, tecnologia, arquitectura, todo, con nosotros. </p>
 				<ul>
 					<li>
-						<img src="/assets/svg/mail.svg" alt=""/>
+						<img src="./assets/svg/mail.svg" alt=""/>
 						<p>chini-destinos@hotmail.com</p>
 					</li>
-					<li><img src="/assets/svg/phone.svg" alt="">
+					<li><img src="./assets/svg/phone.svg" alt="">
 						<p>+593 98 345 1234</p>
 					</li>
 					<li>
-						<img src="/assets/svg/instagram.svg" alt="">
+						<img src="./assets/svg/instagram.svg" alt="">
 						<p>chini_destinos</p>
 					</li>
-					<li><img src="/assets/svg/facebook.svg" alt="">
+					<li><img src="./assets/svg/facebook.svg" alt="">
 						<p>Chini-Destinos</p>
 					</li>
 				</ul>
@@ -44,8 +44,8 @@
 	
 					<div class="card light-glass">
 						<h2>Guayaquil</h2>
-						<img src="/assets/img/national/guayaquil.jpg" alt="">
-						<a href="/html/national/guayaquil.html">
+						<img src="./assets/img/national/guayaquil.jpg" alt="">
+						<a href="./html/national/guayaquil.html">
 							<div class="check-more-button">
 								Mas Información
 							</div>
@@ -54,8 +54,8 @@
 	
 					<div class="card light-glass">
 						<h2>Baños</h2>
-						<img src="/assets/img/national/banos.jpg" alt="">
-						<a href="/html/national/banos.html">
+						<img src="./assets/img/national/banos.jpg" alt="">
+						<a href="./html/national/banos.html">
 							<div class="check-more-button">
 								Mas Información
 							</div>
@@ -64,8 +64,8 @@
 	
 					<div class="card light-glass">
 						<h2>Chimborazo</h2>
-						<img src="/assets/img/national/chimborazo.jpg" alt="">
-						<a href="/html/national/chimborazo.html">
+						<img src="./assets/img/national/chimborazo.jpg" alt="">
+						<a href="./html/national/chimborazo.html">
 							<div class="check-more-button">
 								Mas Información
 							</div>
@@ -74,8 +74,8 @@
 	
 					<div class="card light-glass">
 						<h2>Galápagos</h2>
-						<img src="/assets/img/national/galapagos.jpg" alt="">
-						<a href="/html/national/galapagos.html">
+						<img src="./assets/img/national/galapagos.jpg" alt="">
+						<a href="./html/national/galapagos.html">
 							<div class="check-more-button">
 								Mas Información
 							</div>
@@ -97,8 +97,8 @@
 	
 					<div class="card light-glass">
 						<h2>Finlandia</h2>
-						<img src="/assets/img/international/finlandia.jpg" alt="">
-						<a href="/html/international/finlandia.html">
+						<img src="./assets/img/international/finlandia.jpg" alt="">
+						<a href="./html/international/finlandia.html">
 							<div class="check-more-button">
 								Mas Información
 							</div>
@@ -107,8 +107,8 @@
 	
 					<div class="card light-glass">
 						<h2>Italia</h2>
-						<img src="/assets/img/international/italia.jpg" alt="">
-						<a href="/html/international/italia.html">
+						<img src="./assets/img/international/italia.jpg" alt="">
+						<a href="./html/international/italia.html">
 							<div class="check-more-button">
 								Mas Información
 							</div>
@@ -117,8 +117,8 @@
 	
 					<div class="card light-glass">
 						<h2>Japón</h2>
-						<img src="/assets/img/international/japon.jpg" alt="">
-						<a href="/html/international/japon.html">
+						<img src="./assets/img/international/japon.jpg" alt="">
+						<a href="./html/international/japon.html">
 							<div class="check-more-button">
 								Mas Información
 							</div>
@@ -127,8 +127,8 @@
 	
 					<div class="card light-glass">
 						<h2>Suiza</h2>
-						<img src="/assets/img/international/suiza.jpg" alt="">
-						<a href="/html/international/suiza.html">
+						<img src="./assets/img/international/suiza.jpg" alt="">
+						<a href="./html/international/suiza.html">
 							<div class="check-more-button">
 								Mas Información
 							</div>
