--- a/html/national/guayaquil.html
+++ b/html/national/guayaquil.html
@@ -16,7 +16,7 @@
 			
 			<div id="info-container">
 
-				<a id="return-button" href="/index.html#national-screen">
+				<a id="return-button" href="https://chinigumy.github.io/Chini-Destinos/">
 					<img src="../../assets/svg/return.svg" alt="">
 				</a>
 
