--- a/html/national/chimborazo.html
+++ b/html/national/chimborazo.html
@@ -13,7 +13,7 @@
 		<div id="card" class="glass">
 			<div id="info-container">
 
-				<a id="return-button" href="/index.html#national-screen">
+				<a id="return-button" href="https://chinigumy.github.io/Chini-Destinos/">
 					<img src="../../assets/svg/return.svg" alt="">
 				</a>
 
